--- a/Help/Gsharp/GsharpHome.htm
+++ b/Help/Gsharp/GsharpHome.htm
@@ -104,7 +104,7 @@ div.WordSection1
 
 <p class=MsoNormal><a href="http://www.addq.se/default.asp"><span
 style='font-size:9.0pt;line-height:115%;font-family:"Arial","sans-serif";
-text-decoration:none'><img border=0 width=900 height=190
+text-decoration:none'><img border=0 width=330 height=190
 src="GsharpHome_files/image001.jpg" alt="AddQ Consulting"></span></a></p>
 
 <p class=MsoNormal><b><span lang=EN-US style='font-size:18.0pt;line-height:
@@ -177,8 +177,8 @@ Community 2011</span></b></i></p>
 </p>
 
 
-<p class=MsoNormal><span lang=EN-US>Copyright © 2010-2018 <a
-href="http://www.addq.se/" target="_blank">AddQ Consulting</a>. All rights
+<p class=MsoNormal><span lang=EN-US>Copyright © 2010-2023 <a
+href="http://www.addq.se/" target="_blank">AddQ</a>. All rights
 reserved.</span></p>
 
 <p class=MsoNormal><span lang=EN-US>G# is a registered trademark of AddQ
