Bugfix: Malleable method (.vim): remove extension in icon method name. Bugfix: Sync Implementation: After only one method warning, error.

--- a/Help/Gsharp/GsharpSystemRequirements.htm
+++ b/Help/Gsharp/GsharpSystemRequirements.htm
@@ -73,7 +73,7 @@ lang=EN-US>&nbsp;</span></p>
 <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt'><span
 lang=EN-US>Supported Operating Systems:</span></p>
 
-<p class=MsoNormal><i><span lang=EN-US>Windows XP/Vista/7/8/10/Server 2003 R2 (32bit)/Server 2008 R2(64 bit)</span></i><i><span
+<p class=MsoNormal><i><span lang=EN-US>Windows XP/Vista/7/8/10/11/Server 2003 R2 (32bit)/Server 2008 R2(64 bit)</span></i><i><span
 lang=EN-US> , </span></i><i><span lang=EN-US>Red Hat Enterprise Linux WS 4 or
 later</span></i><i><span lang=EN-US>, </span></i><i><span lang=EN-US>openSUSE
 10.3 or later</span></i><i><span lang=EN-US> </span></i><i><span lang=EN-US><br>
