Update help by adding G#DependencyViewer and information about clone root class in change inheritance, create class dialog

--- a/Help/Gsharp/GIDE/DialogChangeInheritance/DialogChangeInheritance.html
+++ b/Help/Gsharp/GIDE/DialogChangeInheritance/DialogChangeInheritance.html
@@ -21,6 +21,26 @@
 <Table>
 <TR valign=TOP>
 <TD>
+<P><IMG SRC="ci32.jpg" ALT="ci32"></P>
+</TD>
+<TD>
+<B>Root class</B> <P>Select root class for new parent class list (visible if G#Object been cloned).</P>
+</TD>
+</TR>
+</Table>
+<Table>
+<TR valign=TOP>
+<TD>
+<P><IMG SRC="cbool.jpg" ALT="cbool"></P>
+</TD>
+<TD>
+<B>Only update derived classes to root class descendents?</B> <P>Update inheritance coupling in derived classes to selected root class.</P>
+</TD>
+</TR>
+</Table>
+<Table>
+<TR valign=TOP>
+<TD>
 <P><IMG SRC="cbool.jpg" ALT="cbool"></P>
 </TD>
 <TD>
