--- a/Help/Gsharp/GIDE/DialogCreateClass/DialogCreateClass.html
+++ b/Help/Gsharp/GIDE/DialogCreateClass/DialogCreateClass.html
@@ -108,6 +108,16 @@
 </TD>
 </TR>
 </Table>
+<Table>
+<TR valign=TOP>
+<TD>
+<P><IMG SRC="ci32.jpg" ALT="ci32"></P>
+</TD>
+<TD>
+<B>Root class</B> <P>Select root class for parent class tree (visible if G#Object been cloned).</P>
+</TD>
+</TR>
+</Table>
 
 </BODY>
 </HTML>
