--- a/Help/Gsharp/GsharpMenu.htm
+++ b/Help/Gsharp/GsharpMenu.htm
@@ -19,6 +19,7 @@
 <LI><a href="GDebugger/Trace/GDebugger_Trace.html" target=main_amber>Trace tab</a>
 <LI><a href="GDebugger/ActiveDebug/GDebugger_ActiveDebug.html" target=main_amber>Active Debug tab</a>
 </UL>
+<LI><a href="GsharpDependencyViewer.htm" target=main_amber>G#DependencyViewer</a>
 <LI><a href="GIDE/DialogConvertClasses/DialogConvertClasses.html" target=main_amber>Convert Classes to G#</a>
 <LI><a href="GIDE/DialogOptions/DialogOptions.html" target=main_amber>Options</a>
 </UL>
