Update help information and links

--- a/Help/Gsharp/GsharpExamples.htm
+++ b/Help/Gsharp/GsharpExamples.htm
@@ -127,7 +127,7 @@ div.Section1
 115%;font-family:"Times New Roman","serif"'>G# Framework Examples</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>There are a lot of examples of how to use
-the G# Framework in <i>&lt;LabVIEW&gt;/examples/AddQ/G#</i>.</span></p>
+the G# Framework in <i>&lt;LabVIEW&gt;/examples/Object-Oriented G# Development</i>.</span></p>
 
 <p class=MsoNormal><span lang=EN-US>These examples are also searchable in the
 LabVIEW “Find Examples…”. Search for “G#”.</span></p>
