--- a/Help/Gsharp/GsharpHome.htm
+++ b/Help/Gsharp/GsharpHome.htm
@@ -102,10 +102,10 @@ div.WordSection1
 
 <div class=WordSection1>
 
-<p class=MsoNormal><a href="http://www.addq.se/default.asp"><span
+<p class=MsoNormal><a><span
 style='font-size:9.0pt;line-height:115%;font-family:"Arial","sans-serif";
 text-decoration:none'><img border=0 width=330 height=190
-src="GsharpHome_files/image001.jpg" alt="AddQ Consulting"></span></a></p>
+src="GsharpHome_files/image001.jpg" alt="Qestit Systems"></span></a></p>
 
 <p class=MsoNormal><b><span lang=EN-US style='font-size:18.0pt;line-height:
 115%;font-family:"Times New Roman","serif"'>G# Framework</span></b></p>
@@ -185,11 +185,11 @@ Community 2011</span></b></i></p>
 </p>
 
 
-<p class=MsoNormal><span lang=EN-US>Copyright © 2010-2024 <a
+<p class=MsoNormal><span lang=EN-US>Copyright © 2010-2025 <a
 href="https://www.qestitsystems.com/" target="_blank">Qestit Systems</a>. All rights
 reserved.</span></p>
 
-<p class=MsoNormal><span lang=EN-US>G# is a registered trademark of AddQ by Qestit Systems.</span></p>
+<p class=MsoNormal><span lang=EN-US>G# is a registered trademark of Qestit Systems (AddQ).</span></p>
 
 <p class=MsoNormal><span lang=EN-US>The “COMPATIBLE WITH LABVIEW” logo is a
 trademark of National Instruments Corporation and is used under a license from
