--- a/Help/Gsharp/GsharpTemplates.htm
+++ b/Help/Gsharp/GsharpTemplates.htm
@@ -224,6 +224,18 @@ accessing the attributes are located here.</span></p>
 src="GsharpTemplates_files/image003.jpg"><img width=318 height=461
 src="GsharpTemplates_files/image004.jpg"></p>
 
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span><b><span lang=EN-US
+style='font-size:14.0pt;line-height:115%'>G# Object Attributes Data</span></b></p>
+
+<p class=MsoNormal><span lang=EN-US>The
+object attributes are updated with in place element structure.
+The G# Object use ByRef with Data Value Reference (DVR) to keep attribute data.
+Use in place element structure like picture and connect DVR from method .._GetAttributes.vi in utils to access object data.</span></p>
+
+<p class=MsoNormal><img width=440 height=212
+src="GsharpTemplates_files/image006.jpg" alt=image006.jpg></p>
+
 <p class=MsoNormal><span lang=EN-US>&nbsp;</span><b><span lang=EN-US
 style='font-size:14.0pt;line-height:115%'>Property Definition</span></b></p>
 
